add middleware to server

--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,9 @@
     <title>Hello, sqlite3</title>
   </head>
   <body>
-    <script src="js/sqlite3.js"></script>
-    <script src="js/demo-123.js"></script>
+  <script src="js/sqlite3.js"></script>
+  <script src="js/demo-123.js"></script>
+  <form name="backup" id="myform" action="javascript:void(0);" >
+    <button name="download_db" id="download_db">Download</button>
+  </form>
   </body>
